syntax = "proto3";

package erponomics.manufacturing.domain.item.repository;

import "item.proto";

message GetItemResponse {
  erponomics.manufacturing.domain.item.Item item = 1;
}
